--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ git:
 
 after_success:
   # push coverage results to Coveralls
-  - julia -e 'import Pkg; cd(Pkg.dir("DataStructures")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'import Pkg; cd(Pkg.dir("TrackingHeaps")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
-- julia -e 'import Pkg; cd(Pkg.dir("DataStructures")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+- julia -e 'import Pkg; cd(Pkg.dir("TrackingHeaps")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
 
 jobs:
   include:
