--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
 ## Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
 dist: xenial
-os:
-  - windows
-  - linux
-  - osx
+os: linux
 julia:
   - 1.0
-  - nightly
 notifications:
   email: false
 git:
