--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+TrackingHeaps = "d94bfb22-46ad-56c3-87d0-f6c298cb800e"
 
 [compat]
 Documenter = "0.22"
