--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,12 @@
 language: julia
 dist: xenial
 os: linux
-julia:
-  - 1.1
+julia: 1.1
+codecov: true
 notifications:
   email: false
 git:
   depth: 99999999
-
-after_success:
-  # push coverage results to Coveralls
-  - julia -e 'import Pkg; cd(Pkg.dir("TrackingHeaps")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
-  # push coverage results to Codecov
-  - julia -e 'import Pkg; cd(Pkg.dir("TrackingHeaps")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
 
 jobs:
   include:
@@ -25,4 +19,7 @@ jobs:
         - julia --project=docs -e 'using Pkg; Pkg.instantiate(); Pkg.develop(PackageSpec(path=pwd()))'
         - julia --project=docs --color=yes docs/make.jl
       after_success: skip
+
+after_success:
+  - julia -e 'import Pkg; cd(dirname(pathof(TrackingHeaps))); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
 
