--- a/Project.toml
+++ b/Project.toml
@@ -7,9 +7,11 @@ authors = ["Henrique Becker <henriquebecker91@gmail.com>"]
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [targets]
-test = ["Test"]
+test = ["Test", "Profile", "Random"]
 
 [compat]
 julia = "^1"
