--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ notifications:
 git:
   depth: 99999999
 
+after_success:
+  - julia -e 'import Pkg; Pkg.test("TrackingHeaps"; coverage=true)'
+  - julia -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+
 jobs:
   include:
     - stage: Documentation
@@ -19,7 +23,4 @@ jobs:
         - julia --project=docs -e 'using Pkg; Pkg.instantiate(); Pkg.develop(PackageSpec(path=pwd()))'
         - julia --project=docs --color=yes docs/make.jl
       after_success: skip
-
-after_success:
-  - julia -e 'import Pkg; cd(dirname(pathof(TrackingHeaps))); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
 
